it has a problem with foriefn key ton deleting user fully
